--- a/formattingDemoPage.html
+++ b/formattingDemoPage.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>Formatting Demo Page -2</h1>
+			<h1>Formatting Demo Page - 3</h1>
 			<p>
 			    This simple page demonstrates the formatting tags covered in this lesson
 			</p>
