--- a/formattingDemoPage.html
+++ b/formattingDemoPage.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>Formatting Demo Page - 5</h1>
+			<h1>Formatting Demo Page</h1>
 			<p>
 			    This simple page demonstrates the formatting tags covered in this lesson
 			</p>
@@ -13,16 +13,64 @@
 		<div>
 			<h2>Bold and Strong</h2>
 			<p>
-			    <span style=“bold”>This is bold Text</span>
-			    
-			    <!-- This is relative link -->
-			    <a href="somewhere/somewhere.html">Go Somewhere</a>
+			    <b>This is bold Text</b>
 			</p>
 			<p>
-			    The strong tag has the same visual effect as the bold tag but the strong tag also marks the enclosed text as more important. It is also easier for screen readers to read for the visually disabled. 
-			    
-			    <!-- This is an absolute link -->
-			    <a href="/Users/kate/Desktop/JavaProgramsBurke/somewhere/somewhere.html">Go Somewhere</a>
+				The strong tag has the same visual effect as the bold tag but the strong tag also marks the enclosed text as more important. It is also easier for screen readers to read for the visually disabled. 
+			</p>
+			<p>
+				<strong>This is what strong text looks like</strong>
+			</p>
+		</div>
+		<div>
+			<h2>Italics and Emphasis</h2>
+			<p>
+				<i>This text is in italics</i>
+			</p>
+			<p>
+				The emphasis tag has the same visual effect as the italic tag but the emphasis tag also marks the enclosed text as more important. It is also easier for screen readers to read. 
+			</p>
+			<p>
+				<em>This is what emphasized text looks like.</em>
+			</p>
+		</div>
+		<div>
+			<h2>Subscript and Superscript</h2>
+			<p>
+				Subscript looks like this <sub>This is subscript.</sub>
+			</p>
+			<p>
+				Superscript looks like this <sup>This is superscript</sup>
+			</p>
+		</div>
+		<div>
+			<h2>Inserted and Deleted</h2>
+			<p>
+				Inserted text looks like this: <ins>This is inserted.</ins>
+			</p>
+			<p>
+				Deleted text looks like this: <del> This is deleted.</del>
+			</p>
+		</div>
+		<div>
+			<h2>Marked</h2>
+			<p>
+				Marked text looks like this: <mark>This is marked</mark>
+			</p>
+		</div>
+		<div>
+			<h2>Blockquote</h2>
+			<p>
+				Blockquoted text looks like this: 
+				<blockquote>
+				This is a blockquote.
+				</blockquote>
+			</p>
+		</div>
+		<div>
+			<h2>Code</h2>
+			<p>
+				Computer code text looks like this: <code>This is code.</code>
 			</p>
 		</div>
 	</body>
