RestaurantSiteV1Menu.html

--- a/Restaurant Site/RestaurantSiteV1Menu.html
+++ b/Restaurant Site/RestaurantSiteV1Menu.html
@@ -19,14 +19,14 @@
         <th>Chicken or Veal Marsala</th>
     </tr>
     <tr>
-        <td>A Whole boneless breaded 
+        <td align="center">A Whole boneless breaded 
             Chicken breast golden brown, topped with provolone cheese, 
             our homemade marinara sauce, and shredded mozzarella cheese. 
             </td>
-        <td>Sliced and breaded with our seasoned bread crumbs, then fried 
+        <td align="center">Sliced and breaded with our seasoned bread crumbs, then fried 
             golden brown, topped with provolone, homemade marinara, and 
             shredded mozzarella cheese.</td>
-        <td>A whole boneless chicken breast sauteed with mushrooms, 
+        <td align="center">A whole boneless chicken breast sauteed with mushrooms, 
             in a marsala wine sauce. Substitue Veal +$2.00.</td>
     </tr>
     <tr>
@@ -40,9 +40,9 @@
             <th>Blackened Salmon</th>
         </tr>
         <tr>
-            <td>A whole boneless chicken breast sauteed with lemon butter 
+            <td align="center">A whole boneless chicken breast sauteed with lemon butter 
                 and capers in a white wine sauce. Substitute Veal +$2.00..</td>
-            <td>Fire grilled Atlantic Salmon blackened with our special seasoning.</td>
+            <td align="center">Fire grilled Atlantic Salmon blackened with our special seasoning.</td>
         </tr>
         <tr>
             <td align="center">$15.95</td>
