Album Styles.html

--- a/Album Styles.html
+++ b/Album Styles.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		.linkText {
-			font-family: arial;
-			font-size: 16px;
-			font-weight: bold;
-		}
 		<!--http://www.inmotionhosting.com/support/edu/website-design/using-css/linking-your-css-to-your-website-->
-	</style>
 	
 	<!-- External stylesheet import -->
 	<link rel="stylesheet" type="text/css" href="Album Styles.css">
@@ -42,8 +35,8 @@
 			<h2>Band Members and Producers</h2>
 		</center>
 		<ul style="list-style-type: disc;">
-			<li>Dan Auerbach - Guitar/Vocals</li>
-			<li>Patrick Carney - Drums</li>
+			<li><i>Dan Auerbach - Guitar/Vocals</i></li>
+			<li><i>Patrick Carney - Drums</i></li>
 		</ul>
 	</div>
 	<div>
@@ -68,53 +61,6 @@
 				<td>2</td>
 				<td>Have Mercy on Me</td>
 				<td>4:42</td>
-			</tr>
-			<tr>
-				<td>3</td>
-				<td>Work Me</td>
-				<td>4:15</td>
-			</tr>
-			<tr>
-				<td>4</td>
-				<td>Meet Me in the City</td>
-				<td>3:38</td>
-			</tr>
-			<tr>
-				<td>5</td>
-				<td>Nobody but You</td>
-				<td>5:21</td>
-			</tr>
-			<tr>
-				<td>6</td>
-				<td>My Mind Is Ramblin' (reprise*)</td>
-				<td>6:45</td>
-			</tr>
-			<tr>
-				<td>7</td>
-				<td>"Junior's Widow"</td>
-				<td>:32</td>
-			</tr>
-		</table>
-		
-		<table id="table2" class="albumTable">
-			<caption>Tracks</caption>
-			<tr>
-				<th>Track #</th>
-				<th>Track Title</th>
-				<th>Track Length</th>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>Keep Your Hands Off Her</td>
-				<td>3:06</td>
-			</tr>
-			<!-- This is the most specific that you can get.
-			This is overriding the td {} CSS in Album Styles.css file we're importing above
-			This is overriding the #table2 td {} CSS in Album Styles.css file we're importing above
-			<tr>
-				<td style="text-align: center">2</td>
-				<td style="text-align: center">Have Mercy on Me</td>
-				<td style="text-align: center">4:42</td>
 			</tr>
 			<tr>
 				<td>3</td>
