--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Burke Treboni</h1>
         <h2>About Me</h2>
         <p>
+            <img src="Images/Burke.jpg" style="width: 250px;"/><br/>
             I am a software develpment student, working 
             on an Intro To Web Development project, in an 
             attempt to attend the Software Guild.
@@ -19,5 +20,9 @@
         <p>
             Music, Day Trading, Guitars, Computers. 
         </p>
+        <footer>
+            <a href="http://www.thesoftwareguild.com"><img src="Images/SoftwareGuildlogo.png" /></a><br/>
+            To learn to build a sit like this one, visit the <a href="http://www.thesoftwareguild.com" />Software Guild.</a>
+        </footer>
     </body>
 </html>
