RestaurantSiteV1Menu.html

--- a/Restaurant Site/RestaurantSiteV1Menu.html
+++ b/Restaurant Site/RestaurantSiteV1Menu.html
@@ -2,57 +2,87 @@
 <html>
     <head>
         <title>Carfagna's Restaurant</title>
+        <style>
+		body {
+			background-color:red;
+		}
+	    </style>
     </head>
     <header>
         <h1 align="center">Carfagna's Restaurant</h1>
+        <link rel="stylesheet" type="text/css" href="RestaurantStyles.css" />
     </header>
     <hr></hr>
     <body>
-    <a href=""/>Home</a>
-    <a href=""/>Menu</a>
-    <a href=""/>Contact Us</a>
+        <a href="RestaurantSiteV1.html"/>Home</a>
+        <a href="RestaurantSiteV1Menu"/>Menu</a>
+        <a href="RestaurantSiteV1ContactUs"/>Contact Us</a>
     <hr></hr><br/>
-    <table width="100%">
+    
+    <table>
     <tr>
         <th>Chicken Parmigiana</th>
         <th>Eggplant Parmigiana</th>
         <th>Chicken or Veal Marsala</th>
     </tr>
-    <tr>
-        <td align="center">A Whole boneless breaded 
+    <tr style="text-align: justify">
+        <td>A Whole boneless breaded 
             Chicken breast golden brown, topped with provolone cheese, 
             our homemade marinara sauce, and shredded mozzarella cheese. 
             </td>
-        <td align="center">Sliced and breaded with our seasoned bread crumbs, then fried 
+        <td>Sliced and breaded with our seasoned bread crumbs, then fried 
             golden brown, topped with provolone, homemade marinara, and 
             shredded mozzarella cheese.</td>
-        <td align="center">A whole boneless chicken breast sauteed with mushrooms, 
+        <td>A whole boneless chicken breast sauteed with mushrooms, 
             in a marsala wine sauce. Substitue Veal +$2.00.</td>
     </tr>
     <tr>
-        <td align="center">$15.95</td>
-        <td align="center">$14.95</td>
-        <td align="center">$15.95</td>
+        <td>$15.95</td>
+        <td>$14.95</td>
+        <td>$15.95</td>
     </table><br/>
     <table width="100%">
         <tr>
             <th>Chicken or Veal Picatta</th>
             <th>Blackened Salmon</th>
         </tr>
-        <tr>
-            <td align="center">A whole boneless chicken breast sauteed with lemon butter 
+        <tr style="text-align: center;">
+            <td>A whole boneless chicken breast sauteed with lemon butter 
                 and capers in a white wine sauce. Substitute Veal +$2.00..</td>
-            <td align="center">Fire grilled Atlantic Salmon blackened with our special seasoning.</td>
+            <td>Fire grilled Atlantic Salmon blackened with our special seasoning.</td>
         </tr>
         <tr>
-            <td align="center">$15.95</td>
-            <td align="center">$15.95</td>
+            <td>$15.95</td>
+            <td>$15.95</td>
         </tr>
-    </table>
+    </table><br/>
+
+    <table width="91%">
+        <tr>
+            <td><u>Beverages</u></td>
+        </tr>
+        <tr>
+            <td>Root Beer</td>
+            <td>$3.00</td>
+        </tr>
+        <tr>
+            <td>Bottled Water</td>
+            <td>$1.25</td>
+        </tr>
+        <tr>
+            <td>Lemonade</td>
+            <td>$1.00</td>
+        </tr>
+        <tr>
+            <td>Iced Tea</td>
+            <td>$1.25</td>
+        </tr>
+    </table>  
     <hr></hr><br/>
-    <footer>
-        <p align="center">2025 Polaris Parkway, Columbus OH 43240-2000</p>
-        <p align="center">614-848-4488</p>
+
+    <footer style="text-align: center;">
+        <p>2025 Polaris Parkway, Columbus OH 43240-2000</p>
+        <p>614-848-4488</p>
     </footer>
     </body>
 </html>
