--- a/Albumpagev6.html
+++ b/Albumpagev6.html
@@ -3,102 +3,106 @@
 <head>
 		<!--http://www.inmotionhosting.com/support/edu/website-design/using-css/linking-your-css-to-your-website-->
 	
-<link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"/>
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
-</script>
-	<link rel="stylesheet" type="text/css" href="Album Styles.css">
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="AlbumPagev6.css">
 </head>
 <body>
-	<center>
-		<img src="http://ecx.images-amazon.com/images/I/51CBSDCWK4L.jpg" class="img-circle">
-	</center>
-	<center>
-		<title>The Black Keys Chulahoma</title>
-	</center>
-	<div>
-		<center>
-			<h1>Chulahoma</h1>
-		</center>
-	</div>
-	<div>
-		<center>
-			<a href="https://theblackkeys.com" class="linkText" /><center>The Black Keys</center></a>
-		</center>
-	</div>
-	<div>
-		<center>
-		<h3>May 2, 2006</h3>
-		</center>
-		<hr>
-		</hr>
-	</div>
-	<div>
-		<center>
-			<h2>Band Members and Producers</h2>
-		</center>
-		<ul style="list-style-type: disc;">
-			<li><i>Dan Auerbach - Guitar/Vocals</i></li>
-			<li><i>Patrick Carney - Drums</i></li>
-		</ul>
-	</div>
 	<div class="container">
-        <div class="col-xs-12">
-            <div class="table-responsive">
-		        <table id="table1" class="albumTable">
-			        <caption>Tracks</caption>
-                    <thead>
-			        <tr>
-				        <th>Track #</th>
-				        <th>Track Title</th>
-				        <th>Track Length</th>
-			        </tr>
-                    </thead>
-                    <tbody>
-			        <tr>
-				        <td>1</td>
-				        <td>Keep Your Hands Off Her</td>
-				        <td>3:06</td>
-			        </tr>
-			        <tr>
-				        <td>2</td>
-				        <td>Have Mercy on Me</td>
-				        <td>4:42</td>
-			        </tr>
-			        <tr>
-			        	<td>3</td>
-			        	<td>Work Me</td>
-			        	<td>4:15</td>
-			        </tr>
-			        <tr>
-			        	<td>4</td>
-			        	<td>Meet Me in the City</td>
-			        	<td>3:38</td>
-			        </tr>
-			        <tr>
-			        	<td>5</td>
-			        	<td>Nobody but You</td>
-			        	<td>5:21</td>
-			        </tr>
-			        <tr>
-				        <td>6</td>
-				        <td>My Mind Is Ramblin' (reprise*)</td>
-				        <td>6:45</td>
-			        </tr>
-			        <tr>
-				        <td>7</td>
-				        <td>"Junior's Widow"</td>
-				        <td>:32</td>
-			        </tr>
-                    </tbody>
-                    <tfoot></tfoot>
-		        </table><br/>
-            </div>
-        </div>
-	</div>
+		<div class="row">
+			<center>
+				<img src="http://ecx.images-amazon.com/images/I/51CBSDCWK4L.jpg" class="img-circle">
+			</center>
+			<center>
+				<title>The Black Keys Chulahoma</title>
+
+			<div id="greeting"></div>
+			</center>
+			<div>
+				<center>
+					<h1>Chulahoma</h1>
+				</center>
+			</div>
+			<div>
+				<center>
+					<a href="https://theblackkeys.com" class="linkText">The Black Keys</a>
+				</center>
+			</div>
+			<div>
+				<center>
+				<h3>May 2, 2006</h3>
+				</center>
+				<hr/>
+			</div>
+			<div>
+				<center>
+					<h2>Band Members and Producers</h2>
+				</center>
+				<ul style="list-style-type: disc;">
+					<li><i>Dan Auerbach - Guitar/Vocals</i></li>
+					<li><i>Patrick Carney - Drums</i></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="table-responsive">
+					<table id="table1" class="table table-bordered">
+						<caption>Tracks</caption>
+						<thead>
+						<tr>
+							<th>Track #</th>
+							<th>Track Title</th>
+							<th>Track Length</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>1</td>
+							<td>Keep Your Hands Off Her</td>
+							<td>3:06</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Have Mercy on Me</td>
+							<td>4:42</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Work Me</td>
+							<td>4:15</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Meet Me in the City</td>
+							<td>3:38</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Nobody but You</td>
+							<td>5:21</td>
+						</tr>
+						<tr>
+							<td>6</td>
+							<td>My Mind Is Ramblin' (reprise*)</td>
+							<td>6:45</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td>"Junior's Widow"</td>
+							<td>:32</td>
+						</tr>
+						</tbody>
+						<tfoot></tfoot>
+					</table><br/>
+				</div>
+			</div>
+		</div>
+		</div>
 	</body>
 </html>
